fixed header active on mobile

--- a/client/src/components/general/index.css
+++ b/client/src/components/general/index.css
@@ -108,7 +108,6 @@
   .nav-wrapper > .right {
     position: absolute;
     width: 100%;
-    top: 64px;
     height: 100vh;
     overflow: hidden;
     background: rgb(0, 0, 0, 0.6);
